--- a/62130500054_groupwork_6/myprofile.html
+++ b/62130500054_groupwork_6/myprofile.html
@@ -95,11 +95,11 @@
                         placeholder="firstname"
                         v-model="firstName"
                         name="firstName"
-                        :class="errors.firstName == false ? 'border-red-500' : ' ' " 
+                        :class="errors.firstName ? 'border-red-500' : ' ' "
                       />
                     </div>
-                    <span v-if="errors" class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
-                      {{this.errors.firstName}}
+                    <span v-if="errors.firstName" class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
+                      {{this.errors.firstName[0]}}
                    </span>
                     <div class="flex flex-col">
                       <label class="leading-loose">Lastname</label>
@@ -109,25 +109,25 @@
                         placeholder="Optional"
                         v-model="lastName"
                         name="lastName"
-                        :class="errors.lastName == false ? 'border-red-500' : ' ' " 
+                        :class="errors.lastName ? 'border-red-500' : ' ' "
                       />
                     </div>
-                    <span v-if="errors" class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
-                      {{this.errors.lastName}}
+                    <span v-if="errors.lastName" class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
+                      {{this.errors.lastName[0]}}
                    </span>
                     <div class="flex flex-col">
-                      <label class="leading-loose">Event Description</label>
+                      <label class="leading-loose">Description</label>
                       <input
                         type="text"
                         class="px-4 py-2 border focus:ring-gray-500 focus:border-gray-900 w-full sm:text-sm border-gray-300 rounded-md focus:outline-none text-gray-600"
                         placeholder="Optional"
                         v-model="description"
                         name="description"
-                        :class="errors.description == false ? 'border-red-500' : ' ' " 
+                        :class="errors.description ? 'border-red-500' : ' ' "
                       />
                     </div>
-                    <span v-if="errors" class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
-                      {{this.errors.description}}
+                    <span v-if="errors.description" class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
+                      {{this.errors.description[0]}}
                    </span>
                   </div>
                   <div class="pt-4 flex items-center space-x-4">
